[gd_scene load_steps=11 format=2]

[ext_resource path="res://levels/presov/MapParalax.gd" type="Script" id=1]
[ext_resource path="res://assets/bg2/PresovParalax-4.png" type="Texture" id=2]
[ext_resource path="res://assets/bg2/PresovParalax-2.png" type="Texture" id=3]
[ext_resource path="res://assets/bg2/PresovParalax-1.png" type="Texture" id=4]
[ext_resource path="res://assets/bg2/PresovParalax-6.png" type="Texture" id=5]
[ext_resource path="res://assets/bg2/PresovParalax-3.png" type="Texture" id=6]
[ext_resource path="res://assets/bg2/PresovParalax-5.png" type="Texture" id=7]
[ext_resource path="res://assets/bg2/levels.png" type="Texture" id=8]
[ext_resource path="res://assets/icons/lock_closed.png" type="Texture" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 146.123

[node name="Paralax" type="Node2D"]
script = ExtResource( 1 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer6" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.25, 1 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer6"]
texture = ExtResource( 4 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.3, 1 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 3 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.4, 1 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
texture = ExtResource( 6 )

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.5, 1 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer3"]
texture = ExtResource( 2 )

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.7, 1 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer4"]
texture = ExtResource( 7 )

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.9, 1 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer5"]
texture = ExtResource( 5 )

[node name="ParallaxLayer7" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer7"]
texture = ExtResource( 8 )

[node name="Area2D" type="Area2D" parent="ParallaxBackground/ParallaxLayer7/Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParallaxBackground/ParallaxLayer7/Sprite/Area2D"]
position = Vector2( -1740, -347 )
shape = SubResource( 1 )

[node name="Area2D2" type="Area2D" parent="ParallaxBackground/ParallaxLayer7/Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParallaxBackground/ParallaxLayer7/Sprite/Area2D2"]
position = Vector2( -1279, 26 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer7/Sprite/Area2D2"]
visible = false
self_modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
position = Vector2( -1279, 233 )
texture = ExtResource( 9 )

[node name="Area2D3" type="Area2D" parent="ParallaxBackground/ParallaxLayer7/Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParallaxBackground/ParallaxLayer7/Sprite/Area2D3"]
position = Vector2( -442, -197 )
shape = SubResource( 1 )

[node name="Sprite2" type="Sprite" parent="ParallaxBackground/ParallaxLayer7/Sprite/Area2D3"]
visible = false
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( -425, 19 )
texture = ExtResource( 9 )

[node name="Area2D4" type="Area2D" parent="ParallaxBackground/ParallaxLayer7/Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParallaxBackground/ParallaxLayer7/Sprite/Area2D4"]
position = Vector2( 575, 109 )
shape = SubResource( 1 )

[node name="Sprite3" type="Sprite" parent="ParallaxBackground/ParallaxLayer7/Sprite/Area2D4"]
visible = false
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( 579, 319 )
texture = ExtResource( 9 )

[node name="Area2D5" type="Area2D" parent="ParallaxBackground/ParallaxLayer7/Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParallaxBackground/ParallaxLayer7/Sprite/Area2D5"]
position = Vector2( 1624, 272 )
shape = SubResource( 1 )

[node name="Sprite4" type="Sprite" parent="ParallaxBackground/ParallaxLayer7/Sprite/Area2D5"]
visible = false
self_modulate = Color( 0, 0, 0, 1 )
position = Vector2( 1633, 476 )
texture = ExtResource( 9 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -1600, 0 )
current = true
limit_left = -2000
limit_right = 2000
smoothing_enabled = true

[connection signal="input_event" from="ParallaxBackground/ParallaxLayer7/Sprite/Area2D" to="." method="_on_Area2D1_input_event"]
[connection signal="mouse_entered" from="ParallaxBackground/ParallaxLayer7/Sprite/Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="input_event" from="ParallaxBackground/ParallaxLayer7/Sprite/Area2D2" to="." method="_on_Area2D2_input_event"]
[connection signal="mouse_entered" from="ParallaxBackground/ParallaxLayer7/Sprite/Area2D2" to="." method="_on_Area2D_mouse_entered"]
[connection signal="input_event" from="ParallaxBackground/ParallaxLayer7/Sprite/Area2D3" to="." method="_on_Area2D3_input_event"]
[connection signal="mouse_entered" from="ParallaxBackground/ParallaxLayer7/Sprite/Area2D3" to="." method="_on_Area2D_mouse_entered"]
[connection signal="input_event" from="ParallaxBackground/ParallaxLayer7/Sprite/Area2D4" to="." method="_on_Area2D4_input_event"]
[connection signal="mouse_entered" from="ParallaxBackground/ParallaxLayer7/Sprite/Area2D4" to="." method="_on_Area2D_mouse_entered"]
[connection signal="input_event" from="ParallaxBackground/ParallaxLayer7/Sprite/Area2D5" to="." method="_on_Area2D5_input_event"]
[connection signal="mouse_entered" from="ParallaxBackground/ParallaxLayer7/Sprite/Area2D5" to="." method="_on_Area2D_mouse_entered"]
